# D3-API

./: .dockerignore  .env.example  .gitignore  .gitmodules  CLAUDE.md  Dockerfile.prod  README.md  docker-compose.dev.yml  docker-compose.prod.yml  main.py  pyproject.toml
.claude/: settings.local.json
scripts/: dump.sh  entrypoint.sh  populate.sh
scripts/dev/: init.sh
scripts/prod/: start.server.sh  stop.server.sh
src/: const.py  database.py
src/alembic/: alembic.ini  env.py
src/alembic/versions/: 2025_08_10_1458-8d5979018d28.py  2025_08_10_1500-e44e12b99865.py  2025_08_10_1503-d160384f6748.py  2025_08_22_1115-48ada4a11ff5.py  2025_08_22_1504-6f8f3cf3f58a.py  2026_01_03_1518-ade308edf9a6.py
src/controllers/: character.py  item_price_history.py  utils.py
src/models/: __init__.py  base.py  character.py  item_price_history.py
src/routers/: character.py  data_center.py  item_price_history.py
src/schemas/: character.py  data_center.py  item_price_history.py
tests/: test_item_price_history.py
