[tool.poetry]
name = "ezred2bot"
version = "0.1.0"
description = ""
authors = ["Valentin Alix"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pydantic = "^2.7.4"
unidecode = "^1.3.8"
python-dotenv = "^1.0.1"
fastapi = "^0.111.0"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
uvicorn = "^0.30.1"
python-dateutil = "^2.9.0.post0"
msgspec = "^0.19.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
types-python-dateutil = "^2.9.0.20240316"
types-cachetools = "^5.3.0.7"
tqdm = "^4.66.4"
opencv-python = "^4.10.0.82"
pyqt5-qt5 = "5.15.2"
pyqt5 = "^5.15.10"
pyqt5-stubs = "^5.15.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
